Fixing gap

--- a/src/components/controls/shopWindow/Shop-Window.less
+++ b/src/components/controls/shopWindow/Shop-Window.less
@@ -5,8 +5,8 @@
     margin: 0 -@defaultPadding/2;
     padding-bottom: @defaultPadding;
     flex-wrap: wrap;
-    gap: @defaultPadding;
-    column-gap: normal;
+    gap: @defaultPadding 0;
+
     .item {
         width: 20%;
         padding: 0 @defaultPadding/2;
